@@ -2,5 +2,6 @@
  * Fix searching in recycle bin
  * Settings to back to the previous keyboard during database credentials and after form filling
  * Improving action tasks
+ * Improve recognition to reset app timeout
  * Fix minor issues
 
